samples/_failures_safe/1761392329_dbf50d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4b602ff.c: In function ‘main’:
./samples/SAFE/__tmp_f4b602ff.c:153:5: error: expected expression at end of input
  153 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_f4b602ff.c:153:5: error: expected declaration or statement at end of input
